[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://font/font1.fnt" type="BitmapFont" id=2]

[node name="hud" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="test" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 62.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "test"
flat = false

[node name="enemy_remain" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
hint/tooltip = "Number of enemies remained."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 20.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="message" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="message_timer" type="Timer" parent="."]

process/pause_mode = 1
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="pause_popup" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="pause_text" type="Label" parent="pause_popup"]

visibility/blend_mode = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next_wave" type="Label" parent="."]

process/pause_mode = 1
visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 10.0
margin/right = -200.0
margin/bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Next Wave In: "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next_wave_timer" type="Timer" parent="next_wave"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="input_event" from="test" to="." method="_on_test_input_event"]

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]

[connection signal="timeout" from="next_wave/next_wave_timer" to="." method="_on_next_wave_timer_timeout"]


